使用 Colab 创建而成

--- a/notebooks/WS07_GNNsForProteins.ipynb
+++ b/notebooks/WS07_GNNsForProteins.ipynb
@@ -356,7 +356,7 @@
         "id": "KUczGcoh0GXM",
         "outputId": "6ade67f3-c7b4-4ed3-88da-8dbf4f02c589"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -650,7 +650,7 @@
         "collapsed": true,
         "id": "DcdXeTS40HUS"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -676,7 +676,7 @@
         "id": "o--KbAFn0uap",
         "outputId": "5713e794-73cd-4ceb-fb48-288dc84a630e"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -724,7 +724,7 @@
         "\n",
         "Most neural networks work on Euclidean data. For example, images are linear graphs that are ideally handled by a CNN whose functions depend on the grid-like, ordered structure of the nodes and edges. GNNs can be used for nonlinear data that is more complex and less predictable, like a social network.\n",
         "\n",
-        "图表在我们周围的世界中非常普遍。它们是表示数据的强大方式，因为它们能够捕获对象之间的复杂关系。这方面的一些例子是社交网络、交通网络、电信网络、知识图（如搜索引擎），甚至句子中的单词也可以用图来表示。图允许表示本地（节点级）和全局（图级）信息，捕获正在建模的全部复杂性。\n",
+        "图非常普遍。它们是表示数据的强大方式，因为它们能够捕获对象之间的复杂关系。这方面的一些例子是社交网络、交通网络、电信网络、知识图（如搜索引擎），甚至句子中的单词也可以用图来表示。图允许表示本地（节点级）和全局（图级）信息，捕获正在建模的全部复杂性。\n",
         "\n",
         "大多数神经网络都基于欧几里得数据。例如，图像是线性图，理想情况下由 CNN 处理，其功能取决于节点和边的网格状有序结构。 GNN 可用于更复杂且难以预测的非线性数据，例如社交网络。"
       ],
@@ -2080,7 +2080,7 @@
         "import matplotlib.pyplot as plt\n",
         "\n",
         "# Create a directed graph\n",
-        "G = nx.DiGraph()\n",
+        "G = nx.DiGraph() # 初始化一个有向图\n",
         "G.add_edges_from([\n",
         "    (0, 1),\n",
         "    (0, 2),\n",
@@ -2267,7 +2267,7 @@
         "outputId": "7a0934ca-ed16-49ac-bcc3-8537e1710c64",
         "cellView": "form"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2411,7 +2411,11 @@
       "source": [
         "Edges in a graph can be **directed** or **undirected** based on whether directional dependencies exist between nodes. In a directed graph, edges have a source node and a destination node. In an undirected graph, information flows in both directions which allows it to have symmetry. This means that in an undirected graph, A[i][j] = A[j][i], or in other words, having an undirected edge between n0 to n1 is the same as having two directed edges from n0 to n1 and n1 to n0.\n",
         "\n",
-        "Below is an example of each, with arrows indicating direction."
+        "Below is an example of each, with arrows indicating direction.\n",
+        "\n",
+        "根据节点之间是否存在方向依赖关系，图中的边可以是有向的或无向的。在有向图中，边具有源节点和目标节点。在无向图中，信息在两个方向上流动，这使其具有对称性。这意味着在无向图中，A[i][j] = A[j][i]，或者换句话说，在 n0 到 n1 之间具有无向边与从 n0 到 n1 之间具有两条有向边相同。\n",
+        "\n",
+        "下面是示例，其中箭头指示方向。"
       ],
       "metadata": {
         "id": "FuIKWckQu-mp"
@@ -2470,7 +2474,7 @@
         "id": "kYgJ78H6wdcY",
         "outputId": "c6f74c58-0858-4c51-f7a2-cc13cc58e325"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2524,7 +2528,7 @@
         "id": "2Qbwng-0pHMy",
         "outputId": "09ab709d-b207-4902-c6a8-693d93b71306"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2789,7 +2793,7 @@
         },
         "outputId": "e3fe6648-e8ae-4b6e-e317-eeae48d1eb8c"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2858,7 +2862,7 @@
         "id": "K5nOIdOoxqd5",
         "outputId": "9aef8a08-317c-4131-e709-68cd43b5f324"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3149,7 +3153,7 @@
         "outputId": "aea66b20-7798-4f74-bf5a-027f2bc811b0",
         "cellView": "form"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3361,7 +3365,7 @@
       "metadata": {
         "id": "GfWjJdfl_OGj"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3484,17 +3488,17 @@
       "cell_type": "code",
       "source": [
         "# Simple permutation functions\n",
-        "def identity_permutation(adj_matrix):\n",
+        "def identity_permutation(adj_matrix): # 不变性\n",
         "    return adj_matrix\n",
         "\n",
-        "def reverse_permutation(adj_matrix):\n",
+        "def reverse_permutation(adj_matrix):  # 不变性 [3,2,1,0]\n",
         "    P = np.array([[0, 0, 0, 1],\n",
         "                  [0, 0, 1, 0],\n",
         "                  [0, 1, 0, 0],\n",
         "                  [1, 0, 0, 0]])\n",
         "    return P @ adj_matrix @ P.T\n",
         "\n",
-        "def swap_permutation(adj_matrix):\n",
+        "def swap_permutation(adj_matrix):  # 等变性 [1,0,2,3]\n",
         "    P = np.array([[0, 1, 0, 0],\n",
         "                  [1, 0, 0, 0],\n",
         "                  [0, 0, 1, 0],\n",
@@ -3605,7 +3609,7 @@
         "id": "b795UKDWQjDJ",
         "outputId": "1519ee48-7883-4319-ad34-695866ee12d7"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3759,7 +3763,7 @@
         },
         "outputId": "ad7c5681-f625-40db-c0bf-78f3f611b82c"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3905,7 +3909,7 @@
         },
         "outputId": "84613a71-f0fd-46ce-b796-9b3395b48afb"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4403,9 +4407,10 @@
           "base_uri": "https://localhost:8080/",
           "height": 401
         },
-        "outputId": "fcf5d53a-175f-4ddd-d3d5-c4063e18a877"
+        "outputId": "fcf5d53a-175f-4ddd-d3d5-c4063e18a877",
+        "cellView": "form"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4734,7 +4739,7 @@
       "cell_type": "code",
       "source": [
         "# EVAL\n",
-        "# Create DataLoader 使用 PyTorch 的 DataLoader 创建验证集数据的加载器。\n",
+        "# Create DataLoader 使用 PyTorch 的 DataLoader 创建测试集数据的加载器。\n",
         "test_loader = DataLoader(test_pyg_data_list, batch_size=32)\n",
         "\n",
         "# Initialize model, loss, and optimizer\n",
@@ -4748,7 +4753,7 @@
         "\n",
         "optimizer_steps = 0\n",
         "\n",
-        "for epoch in range(10): # 循环进行 10 次评估（每次对整个验证集进行一次评估）\n",
+        "for epoch in range(10): # 循环进行 10 次评估（每次对整个测试集进行一次评估）\n",
         "    model.eval()  # 设置模型为评估模式（model.eval()）\n",
         "    total_eval_loss = 0\n",
         "    correct_eval = 0\n",
@@ -4756,7 +4761,7 @@
         "        optimizer.zero_grad()\n",
         "        out = model(data) # 前向传播：将当前批次的数据输入模型，获取输出 out\n",
         "        loss = criterion(out, data.graph_y) # 计算当前批次的交叉熵损失。\n",
-        "        loss.backward() # 验证集反向传播？\n",
+        "        loss.backward() # 测试集反向传播？\n",
         "        optimizer.step()\n",
         "\n",
         "        total_eval_loss += loss.item()\n",
@@ -4772,7 +4777,7 @@
         "    print(f'Epoch {epoch}, Eval Loss: {eval_loss:.4f}, Eval Accuracy: {eval_accuracy:.4f}')\n",
         "\n",
         "# Plot the training metrics after all epochs\n",
-        "plot_metrics(log_file='eval_metrics_log.txt') # 读取日志文件并绘制验证损失和准确率的变化趋势\n"
+        "plot_metrics(log_file='eval_metrics_log.txt') # 读取日志文件并绘制损失和准确率的变化趋势\n"
       ],
       "metadata": {
         "id": "Zr6vQF26S2Bc",
@@ -5051,7 +5056,7 @@
         },
         "outputId": "7b897a2b-2f7b-4b38-83d6-081b48ae6dc5"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5326,7 +5331,7 @@
         },
         "outputId": "692ae8d1-b68f-429e-9a57-935da8963117"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5482,7 +5487,7 @@
         },
         "outputId": "568db81e-87e0-4b01-b157-52e1bba82798"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5593,7 +5598,7 @@
         },
         "outputId": "88588971-1abd-449e-e83f-c45a98f18cfc"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5704,7 +5709,7 @@
         },
         "outputId": "784ac090-093b-4893-98bd-0fcd785030c9"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5815,7 +5820,7 @@
         },
         "outputId": "3fac2c61-9144-42da-a70f-480b4f06f31f"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5926,7 +5931,7 @@
         },
         "outputId": "f94f05d3-ccbe-42af-a995-fba03dbd3a0a"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6037,7 +6042,7 @@
         },
         "outputId": "2459d0df-9cda-4e07-e925-56b291a9e32a"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6148,7 +6153,7 @@
         },
         "outputId": "4582d487-d45b-4803-8405-bc4277d3a849"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6259,7 +6264,7 @@
         },
         "outputId": "20349291-5e9e-40cb-916b-7bd40b79545b"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
